[B][COLOR gold]v4.00.34[/COLOR][/B]
- Minor metadata and playback fixes

[B][COLOR gold]v4.00.33[/COLOR][/B]
- Subtitles fix for Kodi 19

[B][COLOR gold]v4.00.32[/COLOR][/B]
- Changes to the settings cleaning function

[B][COLOR gold]v4.00.31[/COLOR][/B]
- Fixed Resume dialogue sometimes popping-up twice
- Fixed sources occasionally getting filtered-out for no reason

[B][COLOR gold]v4.00.30[/COLOR][/B]
- Revert some changes that broke certain streams resolving

[B][COLOR gold]v4.00.29[/COLOR][/B]
- Updated premium hosts

[B][COLOR gold]v4.00.28[/COLOR][/B]
- Fixed some TV shows scraping issues when metadata language is other than En
- Addition to TMDb/"scene" data mismatch workaround

[B][COLOR gold]v4.00.27[/COLOR][/B]
- Fixed "Find similar" list backing out to add-on's initial menu

[B][COLOR gold]v4.00.26[/COLOR][/B]
- IMDb lists tweaks/fixes
- Various API requests alterations

[B][COLOR gold]v4.00.25[/COLOR][/B]
- Removed TheOath Metadata dependency - can now be safely uninstalled
- Changed TV shows search API call from Trakt to TMDb

[B][COLOR gold]v4.00.24[/COLOR][/B]
- Fixed "Play from here" Kodi's context menu item not appearing on Kodi 19

[B][COLOR gold]v4.00.23[/COLOR][/B]
- Fixed some issues with cache-ing under py3
- Fixed minor source counting issue

[B][COLOR gold]v4.00.22[/COLOR][/B]
- Fixed sources messed-up order

[B][COLOR gold]v4.00.21[/COLOR][/B]
- Fixed unfiltered sources sneaking into pre-emptive results
- Removed unsupported scraper language settings

[B][COLOR gold]v4.00.20[/COLOR][/B]
- Fixed Library source not appearing when "Primal sorting parameter" is set to Premium

[B][COLOR gold]v4.00.19[/COLOR][/B]
- Source info parsing tweaks

[B][COLOR gold]v4.00.18[/COLOR][/B]
- Movie lists cleanup

[B][COLOR gold]v4.00.17[/COLOR][/B]
- Added alternate option to sort source results by Premium primarily and then by resolution
- Other minor changes to source sort/filtering functions

[B][COLOR gold]v4.00.16[/COLOR][/B]